deploy/components/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
  creationTimestamp: null
  name: new_service
spec:
  ingressClassName: nginx
  rules:
  - host: HOSTNAME_PLACEHOLDER
    http:
      paths:
      - backend:
          service:
            name: new_service
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - {}
status:
  loadBalancer: {}
